[package]
name = "maplibre-android" # Naming this "android" is not possible. Compilation fails.
version = "0.1.0"
description = ""
categories = []
edition = "2021"
publish = false

[dependencies]
maplibre = { path = "../maplibre" }
maplibre-winit = { path = "../maplibre-winit", version = "0.0.1"  }
env_logger = "0.9.0"
log = "0.4.17"
ndk-glue = "0.5.0" # version is required by winit
jni = "0.19.0"

[lib]
#name = "maplibre_android" Currently not supported: https://github.com/rust-windowing/android-ndk-rs/issues/136
crate-type = ["rlib", "cdylib"]

[package.metadata.android]
apk_name = "maplibre-rs-demo"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"
