[package]
name = "apple"
version = "0.1.0"
description = ""
categories = []
edition = "2021"
publish = false

[dependencies]
maplibre = { path = "../maplibre" }
maplibre-winit = { path = "../maplibre-winit", version = "0.0.1"  }

env_logger = "0.9.0"

[lib]
name = "maplibre_apple"
crate-type = ["staticlib"]
