[package]
name = "apple"
publish = false

version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true

[dependencies]
maplibre = { path = "../maplibre", features = ["thread-safe-futures"] }
maplibre-winit = { path = "../maplibre-winit", version = "0.0.1"  }

env_logger = "0.9.0"

[lib]
name = "maplibre_apple"
crate-type = ["staticlib"]
