[package]
name = "apple"
version = "0.1.0"
publish = false

description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true

[dependencies]
maplibre = { path = "../maplibre", features = ["thread-safe-futures"] }
maplibre-winit = { path = "../maplibre-winit", version = "0.1.0"  }

env_logger.workspace = true

[lib]
name = "maplibre_apple"
crate-type = ["staticlib"]
