[package]
name = "benchmarks"
version = "0.1.0"
description = ""
categories = []
edition = "2021"

[dependencies]
maplibre = { path = "../maplibre", features = ["headless", "embed-static-tiles", "thread-safe-futures"] }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["async_tokio"] }
tokio = "1.19.2"

[[bench]]
name = "render"
harness = false

[[bench]]
name = "data"
harness = false
