[package]
name = "benchmarks"
version = "0.1.0"
publish = false

description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true

[dependencies]
maplibre = { path = "../maplibre", features = ["headless", "embed-static-tiles", "thread-safe-futures"] }

[dev-dependencies]
criterion.workspace = true
tokio.workspace = true

[[bench]]
name = "render"
harness = false

[[bench]]
name = "data"
harness = false
