[package]
name = "maplibre-android"
version = "0.1.0"
description = ""
categories = []
edition = "2021"

[dependencies]
maplibre = { path = "../maplibre" }
env_logger = "0.9"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.5.0" # version is required by winit

[lib]
crate-type = ["rlib", "cdylib"]

[package.metadata.android]
apk_name = "maplibre-rs-demo"
[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"