[package]
name = "maplibre-build-tools"
version = "0.1.0"
description = "A library with build tools for maplibre-rs"
categories = []
edition = "2021"
authors = ["Maximilian Ammann <max@maxammann.org>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

[features]
sqlite = ["rusqlite"]

[dependencies]
naga = { git = "https://github.com/gfx-rs/naga", branch = "master", features = ["wgsl-in"] }
walkdir = "2.3.2"
log = "0.4.17"
rusqlite = { version = "0.27.0", optional = true }
serde_json = "1.0.82"
flate2 = "1.0.24"
