[package]
name = "maplibre-build-tools"
version = "0.1.0"
description = "A library with build tools for maplibre-rs"
readme = "../README.md"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true

[features]
sqlite = ["rusqlite"]

[dependencies]
naga = { version = "*", features = ["wgsl-in"] }
walkdir = "2.3.2"
log = "0.4.17"
rusqlite = { version = "0.28.0", optional = true }
serde_json = "1.0.82"
flate2 = "1.0.24"
