[package]
name = "maplibre-build-tools"
version = "0.1.0"
description = "A library with build tools for maplibre-rs"
readme = "../README.md"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true

[features]
sqlite = ["rusqlite"]

[dependencies]
naga.workspace = true
walkdir.workspace = true
log.workspace = true
rusqlite = { workspace = true, optional = true }
serde_json.workspace = true
flate2.workspace = true
