[package]
name = "maplibre-demo"
version = "0.1.0"
categories = []
edition = "2021"
authors = ["Maximilian Ammann <max@maxammann.org>"]
license = "MIT OR Apache-2.0"
description = "Demo of maplibre"
readme = "../README.md"

[features]
web-webgl = ["maplibre/web-webgl"]
trace = ["maplibre/trace"]

[dependencies]
env_logger = "0.9.0"
maplibre = { path = "../maplibre", version = "0.0.2", features = ["headless", "thread-safe-futures"]  }
maplibre-winit = { path = "../maplibre-winit", version = "0.0.1"  }

tile-grid = "0.3"

clap = { version = "3.2.12", features = ["derive"] }
