[package]
name = "maplibre-demo"
version = "0.1.0"
description = "Demo of maplibre-re"
readme = "../README.md"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true

[features]
web-webgl = ["maplibre/web-webgl"]
trace = ["maplibre/trace"]

[dependencies]
env_logger = "0.10.0"
maplibre = { path = "../maplibre", version = "0.1.0", features = ["headless", "thread-safe-futures"]  }
maplibre-winit = { path = "../maplibre-winit", version = "0.1.0"  }

tile-grid = "0.3"

clap = { version = "4.1.1", features = ["derive"] }
