[package]
name = "maplibre-demo"
version = "0.1.0"
description = "Demo of maplibre-re"
readme = "../README.md"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true

[features]
web-webgl = ["maplibre/web-webgl"]
trace = ["maplibre/trace"]
headless = ["maplibre/headless"]

[dependencies]
env_logger.workspace = true
maplibre = { path = "../maplibre", version = "0.1.0", features = ["thread-safe-futures"]  }
maplibre-winit = { path = "../maplibre-winit", version = "0.1.0"  }
tile-grid.workspace = true
clap.workspace = true
