[package]
name = "maplibre-winit"
version = "0.1.0"

description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "linux", target_os = "android", target_os = "windows"))'.dependencies]
tokio.workspace = true

# FIXME: is this section needed?  Seems to be identical to the default
#[target.'cfg(target_os = "android")'.dependencies]
#winit.wokrspace = true

[target.'cfg(target_os = "linux")'.dependencies]
winit = { workspace = true, features = ["x11", "wayland"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies]
maplibre = { path = "../maplibre", version = "0.1.0" }
winit.workspace = true
cgmath.workspace = true
instant.workspace = true
log.workspace = true
