[package]
name = "maplibre"
version = "0.0.2"
edition = "2021"
build = "build.rs"
authors = ["Maximilian Ammann <max@maxammann.org>"]
license = "MIT OR Apache-2.0"
description = "Native Maps for Web, Mobile and Desktop"
readme = "../README.md"

[features]
web-webgl = ["wgpu/webgl"]
# Enable tracing using tracy on desktop/mobile and the chrome profiler on web
trace = ["tracing-subscriber", "tracing-tracy", "tracy-client"]
no-thread-safe-futures = []
embed-static-tiles = ["maplibre-build-tools/sqlite"]
headless = ["png"]


[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "linux", target_os = "android", target_os = "windows"))'.dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
env_logger = "0.9.0"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "gzip"] }
reqwest-middleware-cache = "0.1.1" # FIXME: Untrusted dependency
reqwest-middleware = "0.1.6" # FIXME: Untrusted dependency
tracing-tracy = { version = "0.10", optional = true }
tracy-client = { version = "0.14", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
# Use rusttls on android because cross compiling is difficult
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "gzip"] }

[dependencies]
async-trait = "0.1.57"
instant = { version = "0.1.12", features = ["wasm-bindgen"] } # FIXME: Untrusted dependency

# Tracing
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", optional = true }

# Maths
cgmath = "0.18.0"

# Geo
geo = "0.22.1"
geo-types = { version = "0.7.6", features = ["use-rstar_0_9"] }
rstar = "0.9.3"
prost = "0.10.0"
geozero = { version = "0.9.5", default-features = false, features = ["with-mvt", "with-geo"] }
tile-grid = "0.3.0"

# Rendering
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "94ce763" }
lyon = { version = "1.0.0", features = [] }
raw-window-handle = "0.5.0"

# cached = "0.32"

# Logging
log = "0.4.17"

# Utils
bytemuck = "1.12.1"
bytemuck_derive = "1.2.1"

# Static tiles inclusion
include_dir = "0.7.2"

# JSON
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

# Colors
csscolorparser = { version = "0.6.2", features = ["serde", "cint"] }
cint = "0.3.1"

# Required by bevy renderer
thiserror = "1.0.32"
downcast-rs = "1.2.0"
smallvec = "1.9.0"

# Headless
png = { version = "0.17.5", optional = true }

[build-dependencies]
maplibre-build-tools = { path = "../maplibre-build-tools", version = "0.1.0" }
