[package]
name = "maplibre"
version = "0.1.0"
build = "build.rs"
readme = "../README.md"

description.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true

[features]
# FIXME tcs: Remove raster from default
default = ["raster"]
web-webgl = ["wgpu/webgl"]
# Enable tracing using tracy on desktop/mobile and the chrome profiler on web
trace = ["tracing-subscriber", "tracing-tracy"]
thread-safe-futures = []
embed-static-tiles = ["maplibre-build-tools/sqlite"]
headless = ["png"]
raster = ["image"]


[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "linux", target_os = "android", target_os = "windows"))'.dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.1", features = ["rt"] }
env_logger = "0.10.0"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "gzip"] }
reqwest-middleware-cache = "0.1.1" # FIXME: Untrusted dependency
reqwest-middleware = "0.1.6" # FIXME: Untrusted dependency
tracing-tracy = { version = "0.10", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
# Use rusttls on android because cross compiling is difficult
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "gzip"] }

[dependencies]
async-trait = "0.1.57"
instant = { version = "0.1.12", features = ["wasm-bindgen"] } # TODO: Untrusted dependency

# Tracing
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", optional = true }

# Maths
cgmath = "0.18.0"

# Geo
geo = "0.23.1"
geo-types = { version = "0.7.6", features = ["use-rstar_0_9"] }
rstar = "0.9.3"
geozero = { version = "0.9.7", default-features = false, features = ["with-mvt", "with-geo"] }
tile-grid = "0.3.0"

# Rendering
wgpu = "0.14.0"
lyon = { version = "1.0.0", features = [] }
raw-window-handle = "0.5.0"

# cached = "0.32"

# Logging
log = "0.4.17"

# Utils
bytemuck = "1.12.1"
bytemuck_derive = "1.2.1"
thiserror = "1.0"

# Static tiles inclusion
include_dir = "0.7.2"

# JSON
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

# Colors
csscolorparser = { version = "0.6.2", features = ["serde", "cint"] }
cint = "0.3.1"

# Required by bevy renderer
downcast-rs = "1.2.0"
smallvec = "1.9.0"

# Headless
png = { version = "0.17.5", optional = true }
image = { version = "0.24", default-features = false, features = ["jpeg", "webp", "png"], optional = true }

[build-dependencies]
maplibre-build-tools = { path = "../maplibre-build-tools", version = "0.1.0" }
