[package]
name = "wgpu_for_fontrendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
winit = "0.27.2"
env_logger = "0.9"
log = "0.4"
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "94ce763" }
pollster = "0.2.5"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
ttf-parser = "0.15.0"
rustybuzz = "0.5"
rand = "0.8"
