[package]
name = "mapr-utils"
version = "0.1.0"
description = ""
edition = "2021"

[dependencies]
log = "0.4"
# Network
reqwest = { version = "0.11", features = ["gzip"] }
vector-tile = { path = "../vector_tile" }
tokio = { version = "1.14", features = ["full"] }
rusqlite = "0.26"
serde_json = "1.0"

[[bin]]
name = "download_tiles"
path = "src/tile_downloader.rs"
