[package]
name = "vector-tile"
version = "0.1.0"
description = "A library for decoding vector tiles"
readme = "README.md"
categories = ["encoding"]
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4"
protobuf = "2.25"
tile-grid = "0.3"


[build-dependencies]
protobuf-codegen-pure = "2.25"


